Adding answer 2 partial

--- a/DBDA.X414.2/Assignment2/Assignment2.Rmd
+++ b/DBDA.X414.2/Assignment2/Assignment2.Rmd
@@ -26,6 +26,11 @@ Where $\alpha>0$ is the smoothing parameter and as a result the estimate will cr
 
 **2.How can a decision tree be converted into a rule set? Illustrate with an example. What are the advantages of the rule set representation over the decision tree representation?**
 
+Every leaf that classifies becomes a rule,
+
+Find the path to leaf from root and all conditions that the tree satisfies.
+
+
 **3.Take the iris data. Use Naïve Bayes algorithm to find the species with the following two observations with attributes
 [4.5 3.0 5.6 2.1; 5.4 2.6 4.5 0.0] Don’t use the any R package. Show
 various steps involved and do as explained in the class.**
