Confusion matrix modifications

--- a/DBDA.X414.2/Final/Report.Rmd
+++ b/DBDA.X414.2/Final/Report.Rmd
@@ -218,7 +218,7 @@ for ( i in 1:numTestDocs) {
 
 #### Models Performance ####
 
-cm <- confusionMatrix(results,reference=test$isSpam)
+cm <- confusionMatrix(results,reference=test$isSpam,positive="TRUE")
 
 cm
 ```
